--- a/package.json
+++ b/package.json
@@ -5,18 +5,19 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev":"nodemon server.js"
+    "dev": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@hieuga678902003/verifytoken": "^1.0.3",
     "amqplib": "^0.10.4",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "mongodb": "^6.10.0",
-    "mongoose": "^8.8.0",
-    "cors": "^2.8.5"
+    "mongoose": "^8.8.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
